# marksignal-au

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml  update-data.yml
data/: README.md
data/events/: changes.json  signals.json
data/manifests/: source-manifest.json
data/state/: trademarks.json  trademarks.parquet
docs/: architecture.md  data-dictionary.md  dependency-policy.md  ethical-use.md  legal-and-licensing.md  methodology.md  privacy-and-data-boundary.md  restricted-state-setup.md  threat-model.md
docs/decisions/: 0001-static-build.md  0002-entity-resolution.md  0003-explainable-signals.md
site/: astro.config.mjs  check-built-security.mjs  package-lock.json  package.json
site/public/: feed.xml  robots.txt
site/public/data/: signals.csv  signals.json  signals.parquet
site/src/: types.ts
site/tests/: home.test.mjs
src/marksignal/: __init__.py  cli.py  diff.py  fixtures.py  ip_rapid.py  models.py  normalise.py  pipeline.py  privacy.py  resolver.py  signals.py  similarity.py  source_links.py  source_models.py
tests/: conftest.py  test_diff.py  test_ip_rapid.py  test_models.py  test_normalise.py  test_pipeline.py  test_privacy.py  test_resolver.py  test_signals.py  test_similarity.py  test_source_links.py
tests/fixtures/: synthetic-trademarks.json
watchlists/: consumer.yml  demo.yml  finance.yml  technology.yml
watchlists/demonstration/: demo.yml
watchlists/production/: consumer.yml  finance.yml  technology.yml
(+30 files in other folders)
