[build-system]
requires = ["hatchling>=1.31,<2"]
build-backend = "hatchling.build"

[project]
name = "marksignal-au"
version = "0.1.0"
description = "Evidence-first signals from Australian trade mark filings"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "slicedearth" }]
dependencies = [
  "httpx>=0.28.1,<1",
  "polars>=1.42.1,<2",
  "pydantic>=2.13.4,<3",
  "PyYAML>=6.0.3,<7",
]

[project.optional-dependencies]
dev = [
  "mypy>=2.3,<3",
  "pip-audit>=2.10.1,<3",
  "pytest>=9.1.1,<10",
  "pytest-cov>=7.1,<8",
  "ruff>=0.15.22,<1",
  "types-PyYAML>=6.0.12.20250915,<7",
]

[project.scripts]
marksignal = "marksignal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/marksignal"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["marksignal"]
